Google Play Policy Compliance: Complete branding update to JLS Suite, package name change to com.jls.suite, security fixes, and privacy policy updates

--- a/client/index.html
+++ b/client/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, viewport-fit=cover" />
 
-  <title>BillBook - Premium Billing</title>
-  <meta property="og:title" content="BillBook by Lavneet Rathi" />
-  <meta property="og:description" content="Premium invoice and billing management system with sleek design" />
+  <title>JLS Suite - Business Management</title>
+  <meta property="og:title" content="JLS Suite by Lavneet Rathi" />
+  <meta property="og:description" content="Premium business management, billing and loan record-keeping app" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@billbook" />
-  <meta name="twitter:title" content="BillBook by Lavneet Rathi" />
-  <meta name="twitter:description" content="Premium invoice and billing management system with sleek design" />
+  <meta name="twitter:site" content="@jlssuite" />
+  <meta name="twitter:title" content="JLS Suite by Lavneet Rathi" />
+  <meta name="twitter:description" content="Premium business management, billing and loan record-keeping app" />
   <meta name="twitter:image" content="/logo.png" />
 
   <link rel="icon" type="image/png" href="/favicon.png" />
